--- a/templates/base.html
+++ b/templates/base.html
@@ -24,6 +24,8 @@
 
   <!-- Custom CSS -->
   <link rel="stylesheet" href="{% static 'assets/css/style.css' %}">
+  <link href="{% static 'assets/css/messages.css'%}" rel="stylesheet">
+  <script src="{% static 'assets/js/messages.js'%}"></script>
 
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
