--- a/templates/index.html
+++ b/templates/index.html
@@ -29,6 +29,9 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
+  <link href="{% static 'assets/css/messages.css'%}" rel="stylesheet">
+  <script src="{% static 'assets/js/messages.js'%}"></script>
+
  
 
   <link
@@ -42,6 +45,15 @@
 
 
 <body id="top">
+
+  <div class="message-container" id="system-messages">
+    {% for message in messages %}
+    <div class="alert-message alert-{{ message.tags }}">
+        {{ message }}
+        <span class="close-message">&times;</span>
+    </div>
+    {% endfor %}
+  </div>
 
   <!-- 
     - #HEADER
